# cadet-gtk

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  cadet-gtk.desktop  install.sh
config/: GNUnet.cmake  GTK.cmake  Jansson.cmake  LibHandy.cmake  Notify.cmake
setup/: ubuntu_20.04.sh  ubuntu_20.10.sh
src/: chat.c  chat.h  config.h  contacts.c  contacts.h  gnunet.c  gnunet.h  gtk.c  gtk.h  gui.c  gui.h  handy_ui.c  handy_ui.h  json.c  json.h  main.c  messaging.c  messaging.h  msg.c  msg.h  storage.c  storage.h
src/config/: file.c  file.h  internal.h
src/dialog/: chat_management.c  contacts_identity.c  contacts_new.c
src/gnunet/: connection.c  group.c  name.c  publication.c  request.c
src/gui/: chat.c  chat.h  contacts.c  contacts.h  files.c  files.h  keys.c  keys.h  notification.c  notification.h  util.c  util.h
src/gui/dialog/: chat_file.c  chat_management.c  chat_view_files.c  contacts_id_search.c  contacts_identity.c  contacts_new.c  contacts_new_contact.c  contacts_new_group.c
src/messaging/: gnunet.c  gnunet.h  gtk.c  gtk.h  gui.c  gui.h
src/storage/: archieve.c  archieve.h  archive.c  archive.h  chat.c  chat.h  contacts.c  contacts.h  download.c  download.h  files.c  files.h  keys.c  keys.h  upload.c  upload.h
